# ChangeLog for dev-ruby/dnssd
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2

  24 Mar 2010; Hans de Graaff <graaff@gentoo.org> -dnssd-1.3.ebuild:
  Remove old version.

*dnssd-1.3.1 (12 Feb 2010)

  12 Feb 2010; Hans de Graaff <graaff@gentoo.org> +dnssd-1.3.1.ebuild:
  Version bump. Convert to ruby-fakegem.

  12 Feb 2010; Hans de Graaff <graaff@gentoo.org> -dnssd-0.7.1.ebuild:
  Remove old version.

*dnssd-1.3 (01 Sep 2009)

  01 Sep 2009; Hans de Graaff <graaff@gentoo.org> +dnssd-1.3.ebuild:
  Version bump.

  19 Apr 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Initial import.
