@@ -1,14 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST dnssd-1.3.1.gem 31744 RMD160 1edccbadad99110a54eed1e2a776c4e1ebea6807 SHA1 9af6a340415cdc3911086df807996f9d856be6fe SHA256 43f9e3fba2c2ba6b4adb7e07690f4a8444ab66707c25a105227e548796b3cc59
+DIST dnssd-1.4.gem 33280 RMD160 9d3fa7a86ba07fb2e66f4b107181daba665d2501 SHA1 195e77c75c7e5385df68448332dc1c6562fe5d43 SHA256 de7eda1e09b11cf5e88c1f4a97e9aa5a5c3973da78f2dba7ecac22d357594d95
 EBUILD dnssd-1.3.1.ebuild 1152 RMD160 8869989975f02bb118be34b3ce5fced759ef20b2 SHA1 d2c540b026d291189e7e8455c3e17e62e502d4d2 SHA256 5bf32b962a150b3c8af67bb911a677209547d59e196414542c61cf6ae61e33c3
-MISC ChangeLog 621 RMD160 64c09c6c93bf4146900d89926c358986e1a1bce9 SHA1 a0de108397af57fdae49a9e44a2c97923b00c895 SHA256 661357272db7f148b0ba52679f4f64bafa10ed5dcda1c230a636de3ab6a667d5
+EBUILD dnssd-1.4.ebuild 1152 RMD160 8869989975f02bb118be34b3ce5fced759ef20b2 SHA1 d2c540b026d291189e7e8455c3e17e62e502d4d2 SHA256 5bf32b962a150b3c8af67bb911a677209547d59e196414542c61cf6ae61e33c3
+MISC ChangeLog 733 RMD160 b3cc31bb0bb784118214a43576268415b20fa7cf SHA1 b4f66edfbc5d3da377315fd28b755b05226af130 SHA256 635f9eb523c2506fd4727e6ece1a617f430f2708890cb516db3c238b46e878e2
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkup/LMACgkQeM7EJeUH71Og8QCfVhNDg5ZsGALiFEbuva18YOu7
-bAUAn0DFknE4t7Rg8IBEgiRRpO6RdBY8
-=nvZW
+iF4EAREIAAYFAkybYqcACgkQZihJkut28StOVAD+IddO98NVOsLWaYWpmg9O2ZRu
+CMay45aNSWshl7tZuicA/iJvtig/5NJ3KrkzYNcgqC9qT0b+HgxF6ge5WP7JGSs1
+=pRXB
 -----END PGP SIGNATURE-----
