@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/dnssd
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 
+*dnssd-1.4 (23 Sep 2010)
+
+  23 Sep 2010; Hans de Graaff <graaff@gentoo.org> +dnssd-1.4.ebuild:
+  Version bump.
+
   24 Mar 2010; Hans de Graaff <graaff@gentoo.org> -dnssd-1.3.ebuild:
   Remove old version.
 
